--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -774,7 +774,7 @@ had remained in the past like an ideal, and was morally unacceptable has now
 become a cruel reality.
 
 
-\Section % 28
+\Section \label{sec:28}
 As a result of the war of 1914--1918, leading to the breakdown of the most
 powerful nations with centuries-old traditions, nations which were the least
 democratic in their centuries-old ideals, the least free---the anchors of the
@@ -1077,8 +1077,77 @@ In moments like the present one this becomes especially clear.
 
 
 \Section % 33
+Science and scientific work, taken as a whole, are far from a result of
+\emph{only} the work of individual scientists, of their conscious searches for
+scientific truth.
 
-. . .
+Science and scientific work, scientific thought, as a rule, is not a product of
+the armchair scientist, secluded from life, delving into one's own creation or
+into a problem freely chosen without redard to the surrounding environment.
+The Western European Middle Ages monk, heading, it is true, the science of his
+time for a short period of time, was not, in general, a hermit of science, and
+such was not the connected with life by thousands of theards priest of Ancient
+Egypt or Babylon, or the 17th century scientist of Western Europe or North
+America.  They, and most scientists were not the out-of-this-world people that
+fiction and mundane speech paint and have painted more than once.  Such were
+only individual erudites, noblemen-amateurs, individual monks or hermits, but
+they completely disappeared in the crowd of scientific workers, and their role,
+respectable and sometimes necessary, is visible and makes a difference only in
+thorough and detailed study of scientific work.  It is not they who are the
+creators of science.
+
+Science is a creation of life.  Scientific thought draws the material that it
+brings into the form of scientific truth from surrounding life.  It---the thick
+of life,---most of all, creates the material.  This is a tempestuous reflection
+of mankind's life in mankind's environment---the noosphere.\footnote{
+	This must inevitably lead to new forms of government life, since
+	government obstacles to free scientific thought have currently emerged
+	(\autoref{sec:28}), simultaneously with an exceptional growth of the
+	significance of science in goverment.
+}
+\emph{Science is a manifestation of actions in human society, of the totality
+of human thought.}
+
+The actual scientfic construct, as a rule, is not a logically
+elegant,\footnoteRus{
+	логически стройный
+}
+consciously determined by reason in its whole basis system of knowledge.  It is
+full of constant changes, corrections and contradictions, extremely mobile,
+like life, complex in its content, and there is a dynamic, unstable
+equilibrium.
+
+Only rationalistic, or mystical constructs of philosophical systems, or
+theological (and mystical) manifestations of religion, which proceed from
+tenets accepted as true, developed and deepened further strictly logically,
+without dependence on the facts of surrounding nature (including the human
+social environment), could be, and sometimes are logically elegant.
+
+The system of science, taken as a whole, is alwayls imperfect from the
+logically-critical point of view.  Only part of it, true, an always increasing
+one, is incontrovertible (logic, mathematics, the scientific apparatus of
+facts).  The actually existing sciences, historically manifesting in mankind's
+history and in the biosphere, are always pervaded by innumerable, often
+intrinsic for contemporaries, foreign to them, and transformed by them in
+course of the historical process philosophical, religious, social and technical
+generalizations and achievements, whose transformation is, in essence, the main
+\emph{content} of the development of the history of science.  \emph{Only part,}
+though, as we can see, an always increasing part, of science, in reality its
+main content, often not considered as such by scientists, often foreign to
+other manifestations of mankind's spiritual life---the mass of its scientific
+facts, and scientific empirical generalizations correctly constructed from
+them---are indisputable and logically unconditional for all people, and
+obligatory and incontrovertible for all their constructs.\footnote{
+	In my introductory lecture at Moscow University 33 years ago---in
+	academic year 1902/1903,---reprinted a few times
+	\refparencite{vernadsky1902nauchnom}, I attempted to clarify the
+	structure of science.  Much would have to be changed in it now, but its
+	basis seems correct to me.  The present book is partly the latest
+	result of my thoughts and investigations, for whose first expression
+	served my speach in 1902.
+}
+Science as a whole does not have such obligatory nature.
+
 
 \Section % 34
 Science, therefore, is by no means a logical construct, a truth-seeking
