--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -315,6 +315,14 @@
   pages = {196},
 }
 
+@book { clark1930evolution,
+  author = {Austin Hobart Clark},
+  title = {The New Evolution; Zoogenesis},
+  year = {1930},
+  url = {https://archive.org/details/newevolutionzoog00clar},
+  urldate = {2015-12-05},
+}
+
 @book { frazer1930myths,
   author = {James George Frazer},
   title = {Myths of the Origin of Fire},
