--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -94,7 +94,7 @@ existence is a function of it.  He carries it everywhere with himself.  And he
 inevitably changes it lawfully and unceasingly.
 
 
-\Section % 15
+\Section \label{sec:15}
 Simultaneously with mankind's complete envelopment of the surface of the
 biosphere---with its complete colonization,---which is closely connected
 with the achievements of scientfic thought, i.e. with the course of scientific
@@ -1311,8 +1311,38 @@ conclusions of great scientific significance, namely:
 
 
 \Section % 37
+It is in this aspect that the consideration of the emergence of the genus Homo,
+of man, as a marker of \emph{a new age in the planet's history} by geologists
+(\autoref{sec:15}) receives its justification.  Until now geological processes
+encompassing the whole of the Earth's crust, and not only its biosphere, were
+considered the basis of its division into geological systems and geological
+ages.  However, even then drastic change in the form of the living population
+of the planet was always a main characteristic of geological systems and ages.
+As we now know, it is closely connected with great periods of orogenic,
+tectonic, volcanic---it could be said, critical---periods of the history of the
+Earth's crust.
 
-. . .
+In the age of mankind, or the Psychozoic (\autoref{sec:15}), we have, indeed, a
+more distinct picture than those connected with the critical periods of the
+Earth's crust.  We are currently seeing a drastic change in all fauna and all
+flora, the extinction of a great number of species, and the creation of new
+cultural races.  Along with this creation of a new face of the planet,
+connected with agriculture, undoubtedly outside of mankind's will and
+understanding, a change in wild species, adapting to the new conditions of life
+in the culturally modified biosphere, is taking place.  Above this, however,
+one species---Homo sapiens faber---has encompassed the whole planet, and
+occupied a dominant position among life.  This has never occurred before.
+
+We find ourselves only at the beginning of the process, and cannot grasp the
+unavoidable future by thought, yet, but it is already clear that \emph{not only
+mankind is gaining from this.}  A. Clark showed the use of all benefits of
+civilization by insects with numerous facts, and was able to give attention to
+the possibility of the result that insects gain more than mankind from
+mankind's reworking of the biosphere.\footcite{clark1930evolution}  On the
+other hand, we are observing the same phenomenon in the area of diseases among
+cultural plants, animals, and mankind in the world of protista, fungi, and
+microbes.
+
 
 \Section % 38
 
